--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,6 @@
+html {
+  box-sizing: border-box;
+}
 :root {
   --primary-text-color: #212121;
   --text-color: #000000;
@@ -10,12 +13,34 @@
   --text-size: 14px;
 }
 
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margine: 0;
+}
+
+ul {
+  margine: 0;
+  padding-left: 0;
+}
+img {
+  display: block;
+}
 body {
   font-family: "Roboto", sans-serif;
   background-color: var(--second-basic-color);
   color: var(--primary-text-color);
 }
-
+.container {
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin: 0 auto;
+}
 /*-----------LOGO----------*/
 .link {
   text-decoration: none;
@@ -27,6 +52,7 @@ body {
   font-size: 26px;
   line-height: 1.19;
   letter-spacing: 0.03em;
+  margin-right: 92px;
 }
 .logo.header-logo {
   font-family: "Raleway", sans-serif;
@@ -41,6 +67,11 @@ body {
 }
 
 /*-------HEADER----------*/
+.header {
+  padding-top: 24px;
+  padding-bottom: 25px;
+  border: 1px solid #ececec;
+}
 .header-link {
   font-weight: 500;
   font-size: var(--text-size);
@@ -66,9 +97,29 @@ body {
 .header-contact:focus {
   color: var(--accent-color);
 }
+
+.header-list {
+  display: flex;
+  gap: 50px;
+}
+
+.header-nav {
+  display: flex;
+  align-items: center;
+}
+.header-contact-list {
+  display: flex;
+  margin-left: auto;
+  gap: 50px;
+}
+.header-container {
+  display: flex;
+}
 /*------------HERO------------*/
 .hero {
   background-color: #2f303a;
+  padding-top: 200px;
+  padding-bottom: 200px;
 }
 .hero-title {
   color: var(--basic-color);
@@ -78,6 +129,10 @@ body {
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
+  margin-bottom: 30px;
+  max-width: 696px;
+  margin: 0 auto;
+  margin-bottom: 30px;
 }
 .hero-button {
   font-family: inherit;
@@ -91,6 +146,12 @@ body {
   border-color: transparent;
   border-radius: 4px;
   letter-spacing: 0.06em;
+  display: block;
+  margin: 0 auto;
+  margin-top: 30px;
+  padding: 10px 32px;
+  min-width: 216;
+  height: 50;
 }
 
 .hero-button:hover,
@@ -98,12 +159,16 @@ body {
   background-color: #188ce8;
 }
 /*------ОСОБЛИВОСТІ-------*/
+.text {
+  padding-top: 94px;
+}
 
 .text-title {
   font-size: var(--text-size);
   line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+  margin-bottom: 10px;
 }
 .text-aside {
   font-size: var(--text-size);
@@ -111,18 +176,47 @@ body {
   letter-spacing: 0.03em;
   color: var(--small-text-color);
 }
+.text-list {
+  display: flex;
+  justify-content: space-between;
+}
 /*--------------СЕКЦІЇ---------*/
+.section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
+.category-list {
+  display: flex;
+  gap: 30px;
+}
+
+.category-item {
+  width: calc(100% - 60px) / 3;
+}
+
 .studio-title {
   font-size: 36px;
   line-height: 1.16;
   letter-spacing: 0.03em;
+  text-align: center;
+  margin-bottom: 50px;
 }
 .team {
   background-color: var(--background-color);
 }
 
+.team-list {
+  display: flex;
+  gap: 30px;
+}
+
 .team-item {
   background-color: var(--second-basic-color);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+  width: calc(100% - 90px) / 4;
 }
 
 .team-name {
@@ -130,6 +224,9 @@ body {
   font-size: 16px;
   line-height: 1.18;
   letter-spacing: 0.03em;
+  margin-top: 30px;
+  margin-bottom: 10px;
+  text-align: center;
 }
 
 .team-text {
@@ -137,11 +234,16 @@ body {
   line-height: 1.18;
   letter-spacing: 0.03em;
   color: var(--small-text-color);
+  margin-top: 10px;
+  margin-bottom: 30px;
+  text-align: center;
 }
 
 /*-------------FOOTER----------------*/
 .footer {
   background-color: #2f303a;
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 
 .footer-place,
@@ -158,6 +260,9 @@ body {
 
 .footer-contact {
   color: var(--shadow-text-color);
+  display: block;
+  margin-top: 9px;
+  margin-bottom: 9px;
 }
 
 .footer-contact:hover,
@@ -192,6 +297,8 @@ body {
   cursor: pointer;
   border-color: transparent;
   border-radius: 4px;
+  padding: 6px 22px;
+  width: calc(100% -32px) / 5;
 }
 
 .btn:hover,
@@ -204,16 +311,41 @@ body {
 }
 
 /*------------LIST-----------*/
+.btn-list {
+  margin-bottom: 50px;
+  display: flex;
+  justify-content: center;
+  gap: 8px;
+}
+
+.portfolio-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
+}
+
+.portfolio-item {
+  width: calc(100% - 60px) / 3;
+}
 .portfolio-subject {
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
   color: var(--primary-text-color);
+  margin-top: 20px;
+  margin-bottom: 4px;
 }
 .portfolio-text {
   font-size: 16px;
   line-height: 1.87;
   letter-spacing: 0.03em;
   color: var(--small-text-color);
+  margin-top: 4px;
+  margin-bottom: 20px;
+}
+
+.text-border {
+  padding-left: 24px;
+  border: 1px solid #eeeeee;
 }
