--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,10 @@ html {
   --text-size: 14px;
 }
 
+a {
+  text-decoration: none;
+  color: inherit;
+}
 p,
 h1,
 h2,
@@ -20,16 +24,25 @@ h3,
 h4,
 h5,
 h6 {
-  margine: 0;
+  margin: 0;
 }
-
 ul {
-  margine: 0;
-  padding-left: 0;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+button {
+  cursor: pointer;
+}
+a {
+  text-decoration: none;
 }
 img {
   display: block;
+  max-width: 100%;
+  height: auto;
 }
+
 body {
   font-family: "Roboto", sans-serif;
   background-color: var(--second-basic-color);
@@ -52,7 +65,6 @@ body {
   font-size: 26px;
   line-height: 1.19;
   letter-spacing: 0.03em;
-  margin-right: 92px;
 }
 .logo.header-logo {
   font-family: "Raleway", sans-serif;
@@ -65,12 +77,15 @@ body {
   font-family: "Raleway", sans-serif;
   color: var(--basic-color);
 }
+.header-logo {
+  margin-right: 92px;
+  padding-top: 24px;
+  padding-bottom: 25px;
+}
 
 /*-------HEADER----------*/
 .header {
-  padding-top: 24px;
-  padding-bottom: 25px;
-  border: 1px solid #ececec;
+  border-bottom: 1px solid #ececec;
 }
 .header-link {
   font-weight: 500;
@@ -93,6 +108,11 @@ body {
 .header-list .header-item.current {
   color: var(--accent-color);
 }
+
+.header-link {
+  display: block;
+  padding: 32px 0;
+}
 .header-contact:hover,
 .header-contact:focus {
   color: var(--accent-color);
@@ -111,6 +131,7 @@ body {
   display: flex;
   margin-left: auto;
   gap: 50px;
+  align-items: center;
 }
 .header-container {
   display: flex;
@@ -148,7 +169,6 @@ body {
   letter-spacing: 0.06em;
   display: block;
   margin: 0 auto;
-  margin-top: 30px;
   padding: 10px 32px;
   min-width: 216;
   height: 50;
@@ -177,7 +197,13 @@ body {
 }
 .text-list {
   display: flex;
-  justify-content: space-between;
+  flex-wrap: wrap;
+  margin-right: -10px;
+}
+
+.text-item {
+  flex-basis: calc((100% / 4 - 30px));
+  margin-right: 30px;
 }
 /*--------------СЕКЦІЇ---------*/
 .section {
@@ -191,7 +217,7 @@ body {
 }
 
 .category-item {
-  width: calc(100% - 60px) / 3;
+  width: calc((100% - 60px) / 3);
 }
 
 .studio-title {
@@ -215,7 +241,7 @@ body {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
-  width: calc(100% - 90px) / 4;
+  width: calc((100% - 90px) / 4);
 }
 
 .team-name {
@@ -253,15 +279,22 @@ body {
   letter-spacing: 0.03em;
 }
 
+.footer-logo {
+  display: block;
+  margin-bottom: 20px;
+}
+
+.footer-item {
+  display: block;
+  margin-bottom: 9px;
+}
+
 .footer-contact.place {
   color: var(--basic-color);
 }
 
 .footer-contact {
   color: var(--shadow-text-color);
-  display: block;
-  margin-top: 9px;
-  margin-bottom: 9px;
 }
 
 .footer-contact:hover,
@@ -324,7 +357,7 @@ body {
 }
 
 .portfolio-item {
-  width: calc(100% - 60px) / 3;
+  width: calc((100% - 60px) / 3);
 }
 .portfolio-subject {
   font-weight: 700;
@@ -332,7 +365,6 @@ body {
   line-height: 2;
   letter-spacing: 0.06em;
   color: var(--primary-text-color);
-  margin-top: 20px;
   margin-bottom: 4px;
 }
 .portfolio-text {
@@ -340,11 +372,10 @@ body {
   line-height: 1.87;
   letter-spacing: 0.03em;
   color: var(--small-text-color);
-  margin-top: 4px;
-  margin-bottom: 20px;
 }
 
 .text-border {
-  padding-left: 24px;
+  padding: 20px 24px;
   border: 1px solid #eeeeee;
+  border-top: none;
 }
