--- a/css/styles.css
+++ b/css/styles.css
@@ -198,7 +198,7 @@ body {
 .text-list {
   display: flex;
   flex-wrap: wrap;
-  margin-right: -10px;
+  margin-right: -30px;
 }
 
 .text-item {
@@ -280,7 +280,7 @@ body {
 }
 
 .footer-logo {
-  display: block;
+  display: inline-block;
   margin-bottom: 20px;
 }
 
